# DS_Analisis_Datos

./: .gitignore  README.md  pyproject.toml  x.ipynb
data/processed/: viviendas_EDA_agv.json
notebooks/: 00_Descarga_datos.ipynb  01_Primera_exploración.ipynb  02_Analisis_exploratorio.ipynb  02b_Analisis_exploratorio (no duplicates).ipynb
scripts/: utils_agv.py
