[tool.poetry]
name = "test analisis de datos"
version = "0.1.0"
description = "Analisis de datos sobre bla, bla, bla"
authors = ["angelgvill <angelg.villanueva@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
datasciencetree = "^0.1.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
plotly = "^5.24.1"
scipy = "^1.14.1"
numpy = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
